# 42zk

./: .gitignore  README.md  Zargo.toml
circuits/mixer_bellman/: Cargo.toml  LICENSE  README.md
circuits/mixer_bellman/src/: lib.rs
circuits/noble6/: Cargo.toml  README.md
circuits/noble6/src/: lib.rs
circuits/simple_merkle_proof/: Zargo.toml
circuits/simple_merkle_proof/src/: main.zn
circuits/twin/: READMD.md  Zargo.toml  read_public_data.py
circuits/twin/src/: main.zn
circuits/twin_bellman/: Cargo.toml
circuits/twin_bellman/src/: lib.rs  main.rs
src/: main.zn  merkle.zn
