[package]
name = "countduckula"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman_ce = { version = "0.3.0", default-features = false }
sapling-crypto_ce = { git = "https://github.com/matter-labs/sapling-crypto", default-features = false }
rand = "0.4"
sha2 = "0.8.1"
